# auth_api/src/api/v1/account.py
@@ -149,6 +149,8 @@ def refresh():
 def sign_up():
     login = request.values.get("login", None)
     password = request.values.get("password", None)
+    first_name = request.values.get("first_name", None)
+    last_name = request.values.get("last_name", None)
     if not login or not password:
         return make_response(
             "Login and password required",
@@ -160,9 +162,10 @@ def sign_up():
     if user_model:
         return make_response("Login already existed", HTTPStatus.BAD_REQUEST)
 
-    new_user = create_user(login, password)
+    new_user = create_user(login, password, first_name, last_name)
 
-    access_token = create_access_token(identity=new_user.id, fresh=True)
+    additional_claims = {"first_name": first_name, "last_name": last_name}
+    access_token = create_access_token(identity=new_user.id, additional_claims=additional_claims, fresh=True)
     refresh_token = create_refresh_token(identity=new_user.id)
     user_agent = request.headers["user_agent"]
 
